Clean up Kgram